recursion.cons.lessons.recursion.cons.Min.scala.error
min:6: error: type mismatch;
 found   : Int
 required: Char
			return min2(l.tail, l.head)
                                              ^min:9: error: type mismatch;
 found   : Int
 required: Char
	return min2(l.tail, l.head)
                              ^